--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ar-drone": "0.3.x",
+    "body-parser": "^1.12.3",
     "dronestream": "1.1.x",
     "express": "^4.12.3",
     "http-server": "0.8.x",
