--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.12.3",
     "http-server": "0.8.x",
     "jitsu": "0.15.x",
+    "jquery": "^2.1.3",
     "oculus": "0.0.x"
   },
   "description": "Research Project for Spring 2015 with Jurgen Schultz. Group: Ellis Bigelow, Sam Chan, Brain Tai.",
